<resources>
    <string name="app_name">Equipo_Firebase</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrar</string>
    <string name="crear">Crear</string>
    <string name="mostrar">Mostrar</string>
    <string name="actualizar_eliminar">Actualizar/Eliminar</string>
    <string name="a_adir_equipo">Añadir Equipo</string>
    <string name="nombre_equipo">Nombre Equipo</string>
    <string name="ciudad">Ciudad</string>
    <string name="crear_equipo">Crear Equipo</string>
    <string name="mostrar_equipos">Mostrar Equipos</string>
    <string name="atras">Atras</string>
</resources>