<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".Mostrar">

    <Button
        android:id="@+id/btCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/crear"
        android:onClick="Crear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btMostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text="@string/mostrar"
        android:onClick="Mostrar"
        app:layout_constraintEnd_toEndOf="@+id/btCrear"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btCrear"
        app:layout_constraintTop_toBottomOf="@+id/btCrear" />

    <Button
        android:id="@+id/btActuElim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/actualizar_eliminar"
        android:onClick="ActuElim"
        app:layout_constraintEnd_toEndOf="@+id/btMostrar"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/btMostrar"
        app:layout_constraintTop_toBottomOf="@+id/btMostrar" />
</androidx.constraintlayout.widget.ConstraintLayout>